--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,8 @@
     },
     "dependencies": {
         "@tauri-apps/api": "^2",
-        "@tauri-apps/plugin-opener": "^2"
+        "@tauri-apps/plugin-opener": "^2",
+        "internal-ip": "^8.0.1"
     },
     "devDependencies": {
         "@sveltejs/adapter-static": "^3.0.6",
