--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@capacitor-community/bluetooth-le": "^7.2.0",
 		"@capacitor/android": "^7.4.3",
 		"@capacitor/core": "^7.4.3"
 	}
